--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <title>js-fizzbuzzdom</title>
 </head>
 <body>
-    <div class="container d-flex flex-wrap"></div>
+    <div class="container d-flex flex-wrap">
+        <h1>js-fizzbuzzdom</h1>
+    </div>
     
 
 
